<?xml version="1.0"?>
<package>
  <name>ecn_turtle</name>
  <version>0.0.0</version>
  <description>The ecn_turtle package</description>

  <maintainer email="olivier@todo.todo">olivier</maintainer>

  <license>MIT</license>


  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
